syntax = "proto3";

package io.aggregator.action;

import "kalix/annotations.proto";
import "google/api/annotations.proto";

option java_outer_classname = "TransactionGeneratorAction";

service TransactionGeneratorService {
  option (kalix.codegen) = {
    action: {}
  };

  rpc GenerateTransaction(GenerateTransactionRequest) returns (TopicTransaction) {
    option (google.api.http) = {
      post: "/generate-transaction",
      body: "*"
    };
    option (kalix.method).eventing.out = {
      topic: "jpmc-transactions"
    };
  }
}

message GenerateTransactionRequest {
  string transaction_id = 1;
  string merchant_id = 2;
  double transaction_amount = 3;
}

message TopicTransactionKey {
  string transaction_id = 1;
  string service_code = 2;
  string account_from = 3;
  string account_to = 4;
}

message TopicTransaction {
  TopicTransactionKey transaction_key = 1;
  string merchant_id = 2;
  string shop_id = 3;
  double transaction_amount = 4;
}
