syntax = "proto3";

package io.aggregator.action;

import "kalix/annotations.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

option java_outer_classname = "GeneratorFrontendAction";

service GeneratorFrontendService {
  option (kalix.codegen) = {
    action: {}
  };

  rpc GenerateTransactions(GenerateTransactionsRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/generate-transactions",
      body: "*"
    };
  }
}

message GenerateTransactionsRequest {
  int32 transaction_count = 1;
  double transaction_amount = 2;
  int32 merchant_count = 3;
}

message GenerateTransactionsResponse {
  int32 transaction_count = 1;
  double transaction_amount = 2;
  int32 merchant_count = 3;
}
